--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+linuxmuster-base7 (7.0.0-6ubuntu0) lmn7-testing; urgency=low
+
+  * improved console output
+  * setup: improved password handling and admin user creation.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Sun, 05 Feb 2017 16:13:26 +0100
+
 linuxmuster-base7 (7.0.0-5ubuntu0) lmn7-testing; urgency=low
 
   * setup: added creation of sophomorix-admin user.
