* added i18n support * added german translation

--- a/debian/install
+++ b/debian/install
@@ -1,4 +1,5 @@
 etc/*		etc/
-lib/*           usr/lib/linuxmuster/
+lib/*		usr/lib/linuxmuster/
 sbin/*		usr/sbin/
 share/*		usr/share/linuxmuster/
+locale/*	usr/share/locale/
