--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.0.0-12ubuntu0) lmn7-testing; urgency=low
+
+  * linuxmuster-setup.py: fixed missing old smb.conf deletion.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 25 Mar 2017 23:01:16 +0100
+
 linuxmuster-base7 (7.0.0-11ubuntu0) lmn7-testing; urgency=low
 
   * linuxmuster-setup.py: fixed opsi password query.
