--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.0.0-15ubuntu0) lmn7-testing; urgency=low
+
+  * changed LINBODIR to /srv/linbo.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 31 Mar 2017 16:41:33 +0200
+
 linuxmuster-base7 (7.0.0-14ubuntu0) lmn7-testing; urgency=low
 
   * linuxmuster-setup.py:
