--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.0.0-16ubuntu0) lmn7-testing; urgency=low
+
+  * linuxmuster-setup.py: fixed smb.conf deletion.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 03 Apr 2017 09:39:49 +0200
+
 linuxmuster-base7 (7.0.0-15ubuntu0) lmn7-testing; urgency=low
 
   * changed LINBODIR to /srv/linbo.
