--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
+linuxmuster-base7 (7.0.0-17ubuntu0) lmn7-testing; urgency=low
+
+  * linuxmuster-setup.py, j_linbo.py: added rsync service activation.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 05 Apr 2017 21:56:28 +0200
+
 linuxmuster-base7 (7.0.0-16ubuntu0) lmn7-testing; urgency=low
 
   * linuxmuster-setup.py: fixed smb.conf deletion.
 
- -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 03 Apr 2017 09:39:49 +0200
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 05 Apr 2017 21:50:17 +0200
 
 linuxmuster-base7 (7.0.0-15ubuntu0) lmn7-testing; urgency=low
 
