--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+linuxmuster-base7 (7.0.0-19ubuntu0) lmn7-testing; urgency=low
+
+  * setup smb.conf update, added global options 'registry shares = yes' and
+    'host msdfs = yes'.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 26 Apr 2017 17:38:55 +0200
+
 linuxmuster-base7 (7.0.0-18ubuntu0) lmn7-testing; urgency=low
 
   * linuxmuster-setup.py:
