--- a/debian/changelog
+++ b/debian/changelog
@@ -1,16 +1,24 @@
+linuxmuster-base7 (7.0.0-23ubuntu0) lmn7-testing; urgency=low
+
+  * added grub stuff to constants.py.
+  * added functions isValidMac() and getHostname() to functions.py.
+  * added bind-user creation to setup.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 26 Jul 2017 18:10:26 +0200
+
 linuxmuster-base7 (7.0.0-22ubuntu0) lmn7-testing; urgency=low
 
   * changed sophomorix syntax for creation of global-admin account.
 
  -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 20 Jun 2017 15:48:59 +0200
 
- linuxmuster-base7 (7.0.0-21ubuntu0) lmn7-testing; urgency=low
+linuxmuster-base7 (7.0.0-21ubuntu0) lmn7-testing; urgency=low
 
-   * linuxmuster-import-devices.py:
-     - process host specific dhcp options from field 8 of devices.csv.
-     - create grub cfg links for every pxe host in LINBOGRUBDIR/hostcfg.
+  * linuxmuster-import-devices.py:
+    - process host specific dhcp options from field 8 of devices.csv.
+    - create grub cfg links for every pxe host in LINBOGRUBDIR/hostcfg.
 
-  -- Thomas Schmitt <thomas@linuxmuster.net>  Sun, 14 May 2017 13:49:16 +0200
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Sun, 14 May 2017 13:49:16 +0200
 
 linuxmuster-base7 (7.0.0-20ubuntu0) lmn7-testing; urgency=low
 
