--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.0.0-24ubuntu0) lmn7-testing; urgency=low
+
+  * changed bind-user to global-binduser.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 28 Jul 2017 10:32:01 +0200
+
 linuxmuster-base7 (7.0.0-23ubuntu0) lmn7-testing; urgency=low
 
   * added grub stuff to constants.py.
