--- a/debian/changelog
+++ b/debian/changelog
@@ -1,15 +1,24 @@
+linuxmuster-base7 (7.0.0-26ubuntu0) lmn7-testing; urgency=low
+
+  * setup improvements:
+    - improved network interface detection.
+  * added dependency to samba-dsdb-modules.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 16 Aug 2017 20:57:13 +0200
+
 linuxmuster-base7 (7.0.0-25ubuntu0) lmn7-testing; urgency=low
 
   * setup improvements:
     - reworked ssl certificate creation.
     - configured certificates for various services.
     - netonly mode to configure the network initially.
+    - improved network interface detection.
     - improved ssh link handling.
     - added firewall setup.
     - optimized sequence.
   * added script to create test users.
 
- -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 14 Aug 2017 20:48:34 +0200
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 16 Aug 2017 11:53:05 +0200
 
 linuxmuster-base7 (7.0.0-24ubuntu0) lmn7-testing; urgency=low
 
