Feld 8 in man page für devices.csv ergänzt.

--- a/debian/devices.csv.de.5
+++ b/debian/devices.csv.de.5
@@ -114,11 +114,11 @@ Feld derzeit ungenutzt.
 .br
 Feld derzeit ungenutzt.
 .TP
-.B Feld 8: Momentan unbenutzt. Für linuxmuster.net reserviert
+.B Feld 8: DHCP-Optionen
 .br
-Für zukünftige, jetzt noch nicht vorhersehbare Angaben zum Rechner.
+Hostspezifische DHCP-Optionen: Mehrere Optionen werden mit Komma getrennt.
 .br
-Zulässige Zeichen: [0-9a-zA-Z_-.,]
+Zulässige Zeichen: [0-9a-zA-Z_-.,;"]
 .TP
 .B Feld 9: Dauerhaft unbenutzt von linuxmuster.net
 .br
