--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+linuxmuster-base7 (7.0.0-36ubuntu0) lmn7-testing; urgency=low
+
+  * removed sophomorix-admin.
+  * disabled not needed samba services.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 16 Apr 2018 12:47:28 +0200
+
+linuxmuster-base7 (7.0.0-35ubuntu0) lmn7-testing; urgency=low
+
+  * network setup fixes.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 04 Apr 2018 13:19:36 +0200
+
 linuxmuster-base7 (7.0.0-34ubuntu0) lmn7-testing; urgency=low
 
   * added quota support for test users.
