--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.0.0-39ubuntu0) lmn7-testing; urgency=low
+
+  * smb.conf certificate name fix.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 19 Apr 2018 11:40:25 +0200
+
 linuxmuster-base7 (7.0.0-38ubuntu0) lmn7-testing; urgency=low
 
   * systemd-resolved.service disabled.
