--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.0.0-41ubuntu0) lmn7-testing; urgency=low
+
+  * remake of smb.conf certificate name fix.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 20 Apr 2018 18:37:04 +0200
+
 linuxmuster-base7 (7.0.0-40ubuntu0) lmn7-testing; urgency=low
 
   * added share creation for default-school.
