--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+linuxmuster-base7 (7.0.0-43ubuntu0) lmn7-testing; urgency=low
+
+  * added command line parameters for all setup values.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 28 Apr 2018 14:18:18 +0200
+
+linuxmuster-base7 (7.0.0-42ubuntu0) lmn7-testing; urgency=low
+
+  * added servername and domainname to setup again.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 28 Apr 2018 12:18:11 +0200
+
 linuxmuster-base7 (7.0.0-41ubuntu0) lmn7-testing; urgency=low
 
   * remake of smb.conf certificate name fix.
