- fixed OPNsense wan interface configuration (keeps existing one). - fixed  #13 NameError: name 'adminpw_repeated' is not defined.

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,10 @@ linuxmuster-base7 (7.0.0-44ubuntu0) lmn7-testing; urgency=low
   * updated devices.csv man page.
   * fixed #12 -s Attribute error.
   * updated firewall config template for OPNsense 18.1.6 with web-proxy-sso plugin.
+  * fixed OPNsense wan interface configuration (keeps existing one).
+  * fixed  #13 NameError: name 'adminpw_repeated' is not defined.
 
- -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 03 May 2018 09:01:51 +0200
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 03 May 2018 20:10:47 +0200
 
 linuxmuster-base7 (7.0.0-43ubuntu0) lmn7-testing; urgency=low
 
