--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.0.0-45ubuntu0) lmn7-testing; urgency=low
+
+  * fixed missing network in firewall config.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 03 May 2018 21:32:57 +0200
+
 linuxmuster-base7 (7.0.0-44ubuntu0) lmn7-testing; urgency=low
 
   * added server role to appliance entries in devices.csv.
