--- a/debian/devices.csv.de.5
+++ b/debian/devices.csv.de.5
@@ -2,7 +2,7 @@
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
-.TH WORKSTATIONS 5 "30. Oktober 2014"
+.TH DEVICES.CSV 5 "May 08, 2018"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
@@ -16,139 +16,117 @@
 .\" .sp <n>    insert n+1 empty lines
 .\" for manpage-specific macros, see man(7)
 .SH NAME
-/etc/linuxmuster/devices.csv \(em Zentrale Konfigurationsdatei für den Workstationimport bei linuxmuster.net 7
-.
-.PP
-.SH ÜBERSICHT
-.
-Jede Zeile beschreibt ein Gerät (Computer, Drucker, ...)  und hat die folgende Syntax:
-.sp
-.B Raum;Hostname;Gruppe;MAC;IP;1;1;1;computer;;PXE;Optionen
-.
-.PP
-.SH BEISPIEL
-.
-r66;r66-pc03;hd;00:11:22:3A:4B:5F;10.20.66.3;1;1;1;computer;;1
-.PP
-.SH BESCHREIBUNG
-.
-Anhand der Einträge in dieser Datei werden die in der Schule vorhandenen
-Computer und sonstigen Geräte dem System bekanntgemacht.
-Dabei werden unter anderem IP-Adressen vergeben,
-Maschinenaccounts für die Domänenanmeldung sowie
-Accounts für den Klassenarbeitsmodus eingerichtet.
-Computer, die nicht in der Datei
-.B workstations
-aufgelistet sind, können nicht auf den Server zugreifen.
+
+Konfigurationsdateien für Netzwerkgeräte bei sophomorix4:
+
+
+default-school:
 .br
-Auch Drucker, Switche und andere Geräte im Schulnetz
-können hier verwaltet werden.
+/etc/linuxmuster/sophomorix/default-school/devices.csv
+
+Andere <school>:
 .br
-Nach jeder Änderung an der Datei muss der Befehl
-.B import_workstations
-aufgerufen werden (als root).
+/etc/linuxmuster/sophomorix/<school>/<school>.devices.csv
+
 .br
-Zeilen, die mit einer Raute beginnen,
-werden als Kommentarzeilen aufgefasst und ignoriert.
-Achtung: Bearbeitet man die Datei über den Reiter
-.B Hosts
-in der Schulkonsole, so werden Kommentarzeilen gelöscht.
-.
+.SH DESCRIPTION
+Um eine Rechnerbezogene Konfiguration der Dienste DNS,
+DHCP, LINBO, ... vorzunehmen, werden die Rechner durch diese Datei
+konfiguriert und danach mit linuxmuster-import-devices importiert.
+
+Als Teil dieses Imports übernimmt sophomorix-device im Active
+Directory von samba4 de Eintragungen für DNS, computer-accounts der
+Rechner sowie Gruppen (Raum, Hardwareclasse, ...)
+
 .PP
 .SH FELDER
-.
-Die Felder werden durch Strichpunkte getrennt
-und haben folgende Bedeutung:
-.TP
-.B Feld 1: Raum
-.br
-Der Name des Raumes, in dem der Rechner steht.
-Anhand dieses Namens werden die Computer in der Schulkonsole
-den Räumen zugeordnet.
-.TP
-.B Feld 2: Gruppe
-.br
-Die Rechnergruppe, zu der der Computer gehört.
-Computer in derselben Rechnergruppe erhalten
-von Linbo dasselbe Image.
-Ist eine Integration in Linbo nicht erforderlich
-(etwa für Drucker, siehe Feld
-.B PXE
-), so wird dieses Feld nicht ausgewertet.
-.TP
-.B Feld 3: Hostname
-.br
-Der eindeutige Hostname.
-Zulässige Zeichen sind Kleinbuchstaben und Ziffern
-sowie der Bindestrich
-(der nicht an erster oder letzter Stelle stehen darf).
-.TP
-.B Feld 4: MAC-Adresse
-.br
-Die MAC-Adresse im Format 01:23:45:AB:CD:EF
-(auch Kleinbuchstaben sind zulässig)
-.TP
-.B Feld 5: IP-Adresse des Rechners
-.TP
-.B Feld 6: MSOffice-Key für Reaktivierung nach Synchronisation
-.TP
-.B Feld 7: Windows-MAK- oder OEM-Key für Reaktivierung nach Synchronisation
-.TP
-.B Feld 8: DHCP-Optionen
-.br
-Hostspezifische DHCP-Optionen: Mehrere Optionen werden mit Komma getrennt.
-.br
-Zulässige Zeichen: [0-9a-zA-Z_-.,;"]
-.TP
-.B Feld 9: Gerätetyp, erlaubte Werte:
-.br
-computer *
-.br
-classroom-teachercomputer *
-.br
-faculty-teachercomputer *
-.br
-iponly
-.br
-thinclient
-.br
-voip
-.br
-printer *
-.br
-server *
-.br
-staff *
-.br
-byod
-.br
-mobile *
-.br
-router
-.br
-wlan
-.br
-switch
-.br
-addc *
-.br
-*) Geräte mit Domainaccount
-.TP
-.B Feld 10: reserviert für linuxmuster.net
-.TP
-.B Feld 11: PXE Flag (number)
-.br
-0: kein PXE-Boot, kein Imaging, mit Sambakonto
-.br
-1: LINBO-PXE-Boot, verwaltet von LINBO, mit Sambakonto
-.br
-2: LINBO-PXE-Boot, verwaltet von LINBO & OPSI, mit Sambakonto
-.br
-3: OPSI-PXE-Boot, verwaltet von OPSI, mit Sambakonto
-.TP
-.SH SEE ALSO
-.BR sophomorix-workstation (8),
 
+Die folgenden 15 Felder bilden eine Zeile, die durch Strichpunkte getrennt sind:
+.TP
+.B Feld 1: Raumname
+.br
+Erstellt eine Gruppe mit dem sophomorixType 'room'
+.TP
+.B Feld 2: Rechnername
+.br
+Erstellt einen dnsNode und (je nach sophomorixRole) einen computer
+account und evtl. eine Gruppe (wenn sophomorixRole printer ist).
+.TP
+.B Feld 3: Hardwareklasse
+.br
+Erstellt eine Gruppe mit dem sophomorixType 'hardwareclass'
+.TP
+.B Feld 4: MAC-Adresse des Rechners
+.TP
+.B Feld 5: IP des Rechners (IPv4)
+.TP
+.B Feld 6: MS-Office-Key
+.TP
+.B Feld 7: MS-Windows-Key
+.TP
+.B Feld 8: Reserviert für linuxmuster.net
+.TP
+.B Feld 9: sophomorixRole
+.br
+Hier sind nur ganz bestimmte Rollennamen zulässig.
+.TP
+.B Feld 10: Reserviert für linuxmuster.net
+.TP
+.B Feld 11: PXE-Flag
+.TP
+.B Feld 12: Reserviert für linuxmuster.net
+.TP
+.B Feld 13: Reserviert für linuxmuster.net
+.TP
+.B Feld 14: Reserviert für linuxmuster.net
+.TP
+.B Feld 15: sophomorixComment
+.br
+Kommentarfeld sophomorixComment beim computer account.
+
+.SH ANMERKUNGEN:
+
+.B Raumname
+.br
+Raumnamen, werden außerhalb der 'default-school' mit prefix
+versehen: '<school>-<room>'.
+
+.B Rechnername
+.br
+dnsNode-Namen sowie computer accounts werden außerhalb
+der 'default-school' mit prefix versehen: '<school>-<rechnername>'.
+
+Computeraccount-Namen bestehen aus Großbuchstaben, gefolgt von $
+(Rechnername 'a102pc1' führt zu dnsNode 'a102pc1' und computer
+account 'A102PC1$')
+
+.B Hardwareklasse
+.br
+Werden NICHT mit prefix versehen. Sie sind schulübergreifend nutzbar.
+
+.B sophomorixRole
+.br
+Es sind nur vorgegebene Werte nutzbar, siehe dazu
+
+sophomorix-samba --show-roletype
+
+Die sophomorixRole entscheidet, ob ein computer account angelegt wird
+oder nicht.
+
+.B Weitere Felder ...
+.br
+Felder ab Feld 16 stören nicht. Und können in Zukunft per Konfigurations
+ins AD synchronisiert werden
+
+
+.SH SEE ALSO
+.BR sophomorix-device (8),
+
+.\".BR baz (1).
+.\".br
+.\"You can see the full options of the Programs by calling for example 
+.\".IR "sophomrix-useradd -h" ,
 .
-.SH AUTOR
-Jörg Richter <mail@jrichter.de> und Rüdiger Beck <jeffbeck@web.de>
+.SH AUTHOR
+Written by <jeffbeck@web.de>.
+
