--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+linuxmuster-base7 (7.0.1-0ubuntu0) lmn7-testing; urgency=low
+
+  * Added subnetting feature.
+  * Prepared firewall api access.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 15 May 2018 22:52:20 +0200
+
 linuxmuster-base7 (7.0.0-48ubuntu0) lmn7-testing; urgency=low
 
   * Fix variable assignment in firewall setup script.
