--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.0.1-4ubuntu0) lmn7-testing; urgency=low
+
+  * fixed addroute api call.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 19 May 2018 23:32:00 +0200
+
 linuxmuster-base7 (7.0.1-3ubuntu0) lmn7-testing; urgency=low
 
   * exclude server network from subnet routing.
