--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.0.1-5ubuntu0) lmn7-testing; urgency=low
+
+  * postinst firewall fullchain cert creation fix (#24).
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 19 May 2018 23:32:00 +0200
+
 linuxmuster-base7 (7.0.1-4ubuntu0) lmn7-testing; urgency=low
 
   * fixed addroute api call.
