--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linuxmuster-base7 (7.0.6-0ubuntu0) lmn7-testing; urgency=low
+
+  * smb.conf certname fix (#28).
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 03 Jul 2018 19:29:27 +0200
+
 linuxmuster-base7 (7.0.5-5ubuntu0) lmn7-testing; urgency=low
 
   * fix sysvol path in smb.conf template.
